--- a/brewer/src/main/resources/templates/estilo/CadastroEstilo.html
+++ b/brewer/src/main/resources/templates/estilo/CadastroEstilo.html
@@ -20,7 +20,7 @@
 	
 		<th:block th:include="fragments/MensagemSucesso"></th:block>
 		
-		<form method="POST" th:object="${estilo}" class="form-vertical  js-form-loading">
+		<form method="POST" th:object="${estilo}" th:action="@{/estilos/novo}" class="form-vertical  js-form-loading">
 			
 			<th:block th:include="fragments/MensagensErroValidacao" ></th:block>
 			
