--- a/brewer/src/main/resources/templates/usuario/CadastroUsuario.html
+++ b/brewer/src/main/resources/templates/usuario/CadastroUsuario.html
@@ -29,7 +29,7 @@
 		</div>
 	
 		<div class="container-fluid">
-			<form method="POST" th:object="${usuario}" class="form-vertical  js-form-loading">
+			<form method="POST" th:object="${usuario}" th:action="@{/usuarios/novo}" class="form-vertical  js-form-loading">
 				<brewer:message/>
 				
 				<div class="row">
